added subpages and edited home page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 
 <html>
   <head>
-    <title>YOUR TITLE HERE</title>
+    <table align="center">
+    <tr>
+      <td>Home</td>
+      <td>iridescence Review</td>
+      <td>Either / Or Review</td>
+      <td>About Me</td>
+    </tr>
+  </table>
+    <title>John's Music Reviews</title>
   </head>
   <body>
-    <!-- YOUR CONTENT HERE -->
+    <p><h1 align=center>Ubik97's Music Reviews</h1></p>
+    <center><img src="https://hoodwork-production.s3.amazonaws.com/uploads/story/image/34524/12968008_907477069375530_4069715003881397030_o.jpg" width="400" height="400"></center>
+    <p><h3>Hello there! My name is John, and I love music. On this site I'll be talking about some of my favorite albums and artists, and even doing some reviews.</h3></p>
+
+
+
   </body>
 </html>
