--- a/QuickieReviews.html
+++ b/QuickieReviews.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <table width="100%">
     <thead>
@@ -7,12 +8,12 @@
         <th><a href="HomePage.html">Home</a></th>
         <th><a href="iridescenceReview.html">iridescence Review</a></th>
         <th><a href="EitherOrReview">Either / Or Review</a></th>
-        <th><a href="AboutMe.html">About Me</a></th>
+        <th><a href="QuickieReviews.html">Quickie Reviews</a></th>
       </tr>
     </thead>
 </table>
 <hr/>
-  <title>John's Music Reviews</title>
+  <title>Quickie Reviews</title>
 </head>
 
 
