started either or review page, fixed links

--- a/EitherOrReview.html
+++ b/EitherOrReview.html
@@ -6,7 +6,7 @@
       <tr>
         <th><a href="HomePage.html">Home</a></th>
         <th><a href="iridescenceReview.html">iridescence Review</a></th>
-        <th><a href="EitherOrReview">Either / Or Review</a></th>
+        <th><a href="EitherOrReview.html">Either / Or Review</a></th>
         <th><a href="QuickieReviews.html">Quickie Reviews</a></th>
       </tr>
     </thead>
@@ -15,6 +15,19 @@
   <title>Either / Or Review</title>
 </head>
 
+<body>
+<center><img src="images/eitherorcover.jpg" width=300px height=300px></center>
 
+</body>
+<h2 align="center">Either / Or, Elliott Smith</h2>
+<br/>
+<br/>
+<p align="center">This review isn't quite ready yet, but it will be soon! In the meantime, click
+<a href="https://www.youtube.com/watch?v=UuizNQUOFCI&list=PL6KwzgIePF4BbeyY14AVTLNz12UjMcJWC" target="_blank">here</a> to listen
+to this album on youtube!</p>
+
+<footer>
+  <p>info@example.com <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
+</footer>
 
 </html>
