--- a/QuickieReviews.html
+++ b/QuickieReviews.html
@@ -22,6 +22,8 @@
 
 
 
-
+<footer>
+  <p>info@example.com <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
+</footer>
 
 </html>
