--- a/iridescenceReview.html
+++ b/iridescenceReview.html
@@ -61,4 +61,8 @@ Worst: HONEY, FABRIC, LOOPHOLE
 
 <p>To listen to iridescence on youtube, <a href="https://www.youtube.com/watch?v=c2jTXZEkbMg&list=PLkAyBawOOPULRkmHu2QG4PpyiGXWj1LlO&index=4" target="_blank">click here</a>
 
+  <footer>
+    <p>info@example.com <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
+  </footer>
+  
 </html>
