--- a/QuickReviews.html
+++ b/QuickReviews.html
@@ -8,15 +8,15 @@
         <th><a href="HomePage.html">Home</a></th>
         <th><a href="iridescenceReview.html">iridescence Review</a></th>
         <th><a href="EitherOrReview">Either / Or Review</a></th>
-        <th><a href="QuickieReviews.html">Quickie Reviews</a></th>
+        <th><a href="QuickReviews.html">Quick Reviews</a></th>
       </tr>
     </thead>
 </table>
 <hr/>
-  <title>Quickie Reviews</title>
+  <title>Quick Reviews</title>
 </head>
 
-
+<center><h2>Quick Reviews</h2></center>
 
 
 
