removed broken folder

--- a/HomePage.html
+++ b/HomePage.html
@@ -7,8 +7,8 @@
         <tr>
           <th><a href="HomePage.html">Home</a></th>
           <th><a href="iridescenceReview.html">iridescence Review</a></th>
-          <th><a href="EitherOrReview">Either / Or Review</a></th>
-          <th><a href="QuickieReviews.html">Quickie Reviews</a></th>
+          <th><a href="EitherOrReview.html">Either / Or Review</a></th>
+          <th><a href="QuickReviews.html">Quick Reviews</a></th>
         </tr>
       </thead>
   </table>
