--- a/iridescenceReview.html
+++ b/iridescenceReview.html
@@ -7,7 +7,7 @@
         <th><a href="HomePage.html">Home</a></th>
         <th><a href="iridescenceReview.html">iridescence Review</a></th>
         <th><a href="EitherOrReview">Either / Or Review</a></th>
-        <th><a href="QuickieReviews.html">Quickie reviews</a></th>
+        <th><a href="QuickReviews.html">Quick reviews</a></th>
       </tr>
     </thead>
 </table>
@@ -60,5 +60,9 @@ Worst: HONEY, FABRIC, LOOPHOLE
 </h4></p>
 
 <p>To listen to iridescence on youtube, <a href="https://www.youtube.com/watch?v=c2jTXZEkbMg&list=PLkAyBawOOPULRkmHu2QG4PpyiGXWj1LlO&index=4" target="_blank">click here</a>
+
+  <footer>
+    <p>info@example.com <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
+  </footer>
 
 </html>
