created in rainbows review

--- a/QuickReviews.html
+++ b/QuickReviews.html
@@ -7,7 +7,7 @@
       <tr>
         <th><a href="HomePage.html">Home</a></th>
         <th><a href="iridescenceReview.html">iridescence Review</a></th>
-        <th><a href="EitherOrReview">Either / Or Review</a></th>
+        <th><a href="EitherOrReview.html">Either / Or Review</a></th>
         <th><a href="QuickReviews.html">Quick Reviews</a></th>
       </tr>
     </thead>
@@ -17,6 +17,44 @@
 </head>
 
 <center><h2>Quick Reviews</h2></center>
+
+<br/>
+<br/>
+
+<center><h4>In Rainbows, <em>Radiohead</em></h4></center>
+<center><h4>10/10</h4></center>
+<center><img src="images/inrainbowscover.jpg"></center>
+<table width="400 px" align="center">
+  <thead>
+    <tr>
+      <td align="center">Song/Ranking</td>
+      <td align="center">Thoughts</td>
+    </tr>
+  </thead>
+  <tr>
+    <td width="250px">
+      <ol>
+        <li>Jigsaw Falling Into Place - <strong>10/10</strong></li>
+        <li>Weird Fishes/Arpeggi - <strong>10/10</strong></li>
+        <li>All I Need - <strong>10/10</strong></li>
+        <li>15 Step - <strong>9.5/10</strong></li>
+        <li>House of Cards - <strong>9.5/10</strong></li>
+        <li>Nude - <strong>9.3</strong></li>
+        <li>Bodysnatchers - <strong>9.3/10</strong></li>
+        <li>Reckoner - <strong>9.3/10</strong></li>
+        <li>Videotape - <strong>8.7</strong></li>
+        <li>Faust Arp - <strong>8.5</strong></li>
+      </ol>
+    </td width="250px">
+    <td>
+      A swirling, kaleidescopic meditation on the phases of life and death,
+      wonderfully concise and organic, in contrast with their previous albums,
+      the one-two punch of electronic paranoia that is Kid A / Amnesiac, and the slightly
+      scatterbrained Hail to The Thief.
+    </td>
+  </tr>
+</table>
+
 
 
 
