--- a/iridescenceReview.html
+++ b/iridescenceReview.html
@@ -6,7 +6,7 @@
       <tr>
         <th><a href="HomePage.html">Home</a></th>
         <th><a href="iridescenceReview.html">iridescence Review</a></th>
-        <th><a href="EitherOrReview">Either / Or Review</a></th>
+        <th><a href="EitherOrReview.html">Either / Or Review</a></th>
         <th><a href="QuickReviews.html">Quick reviews</a></th>
       </tr>
     </thead>
