finished reviews on quick review page

--- a/QuickReviews.html
+++ b/QuickReviews.html
@@ -22,8 +22,7 @@
 <br/>
 
 <center><h4>In Rainbows, <em>Radiohead</em></h4></center>
-<center><h4>10/10</h4></center>
-<center><img src="images/inrainbowscover.jpg"></center>
+<center><img src="images/inrainbowscover.jpg" height="200px" width="200px"></center>
 <table width="400 px" align="center">
   <thead>
     <tr>
@@ -53,6 +52,105 @@
       scatterbrained Hail to The Thief.
     </td>
   </tr>
+  <tfoot>
+    <tr>
+      <td>
+        <h4>Score: 9.8/10</h4>
+      </td>
+    </tr>
+  </tfoot>
+</table>
+
+<br/>
+<br/>
+
+<center><h4>iridescence, <em>BROCKHAMPTON</em></h4></center>
+<center><img src="images/irdcover.jpg" width="200px" height="200px"></center>
+<table width="400 px" align="center">
+  <thead>
+    <tr>
+      <td align="center">Song/Ranking</td>
+      <td align="center">Thoughts</td>
+    </tr>
+  </thead>
+  <tr>
+    <td width="250px">
+      <ol>
+        <li>NEW ORLEANS - <strong>9.5</strong></li>
+        <li>TONYA - <strong>9.5</strong></li>
+        <li>BERLIN - <strong>9/10</strong></li>
+        <li>TAPE - <strong>9/10</strong></li>
+        <li>DISTRICT - <strong>8.5/10</strong></li>
+        <li>SOMETHING ABOUT HIM - <strong>8.5/10</strong></li>
+        <li>WHERE THE CASH AT - <strong>8.5/10</strong></li>
+        <li>J'OUVERT - <strong>8/10</strong></li>
+        <li>WEIGHT - <strong>7.7/10</strong></li>
+        <li>VIVID - <strong>7.7/10</strong></li>
+        <li>SAN MARCOS - <strong>7.3/10</strong></li>
+        <li>THUG LIFE - <strong>7/10</strong></li>
+        <li>HONEY - <strong>5/10</strong></li>
+        <li>LOOPHOLE - <strong>4.3/10</strong></li>
+        <li>FABRIC - <strong>3/10</strong></li>
+      </ol>
+    </td width="250px">
+    <td>
+      An abrasive new sound from one of the most interesting groups in rap today, and a great album full of
+      smart writing, catchy melodies, and excellant production.
+    </td>
+  </tr>
+  <tfoot>
+    <tr>
+      <td>
+        <h4>Score: 7.5/10</h4>
+      </td>
+    </tr>
+  </tfoot>
+</table>
+
+<br/>
+<br/>
+
+
+<center><h4>Either / Or, <em>Elliott Smith</em></h4></center>
+<center><img src="images/eitherorcover.jpg" weight="200px" height="200px"></center>
+<table width="400 px" align="center">
+  <thead>
+    <tr>
+      <td align="center">Song/Ranking</td>
+      <td align="center">Thoughts</td>
+    </tr>
+  </thead>
+  <tr>
+    <td width="250px">
+      <ol>
+        <li>Alameda - <strong>10/10</strong></li>
+        <li>Between the Bars - <strong>10/10</strong></li>
+        <li>Say Yes - <strong>10/10</strong></li>
+        <li>Rose Parade - <strong>10/10</strong></li>
+        <li>Angeles - <strong>10/10</strong></li>
+        <li>Speed Trials - <strong>10/10</strong></li>
+        <li>2:45 AM - <strong>10/10</strong></li>
+        <li>Punch and Judy - <strong>10/10</strong></li>
+        <li>Ballad of Big Nothing - <strong>10/10</strong></li>
+        <li>Pictures of Me - <strong>9.7/10</strong></li>
+        <li>No Name No. 5 - <strong>9.3/10</strong></li>
+        <li>Cupid's Trick - <strong>9/10</strong></li>
+      </ol>
+    </td width="250px">
+    <td>
+      This album is as near to perfect as any has ever come. Elliott was a genius; an unrivaled songwriter,
+      an unrecognized guitar virtuoso, and a master of honest musical-emotional expression. Though it may appear,
+      upon first listen, an unremarkable lo-fi indie record, it's magic pulls you in slowly over multiple listens,
+      and once it clicks with you, you'll adore it forever.
+    </td>
+  </tr>
+  <tfoot>
+    <tr>
+      <td>
+        <h4>Score: 10/10</h4>
+      </td>
+    </tr>
+  </tfoot>
 </table>
 
 
