added some links

--- a/EitherOrReview.html
+++ b/EitherOrReview.html
@@ -22,9 +22,18 @@
 <h2 align="center">Either / Or, Elliott Smith</h2>
 <br/>
 <br/>
-<p align="center">This review isn't quite ready yet, but it will be soon! In the meantime, click
-<a href="https://www.youtube.com/watch?v=UuizNQUOFCI&list=PL6KwzgIePF4BbeyY14AVTLNz12UjMcJWC" target="_blank">here</a> to listen
-to this album on youtube!</p>
+<p align="center">This review isn't quite ready yet, but it will be soon! In the meantime, you can:</p>
+<br/>
+
+<ul>
+  <li>
+    Click <a href="QuickReviews.html">here</a> to read my quick review and track reviews for Either / Or
+  </li>
+  <li> click <a href="https://www.youtube.com/watch?v=UuizNQUOFCI&list=PL6KwzgIePF4BbeyY14AVTLNz12UjMcJWC" target="_blank">here</a> to listen
+to this album on youtube!
+  </li>
+</ul>
+
 
 <footer>
   <p>info@example.com <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
