--- a/iridescenceReview.html
+++ b/iridescenceReview.html
@@ -31,11 +31,11 @@ like THUG LIFE and SOMETHING ABOUT HIM.
 <br/>
 <br/>
 Thematically, iridescence is a reaction to the fame that the Saturation trilogy garnered them, and as a result, it feels
- more mature and genuinely introspective than any of their previous work. However, perhaps due to the size and diversity of the group,
- it’s more of a collage than a cohesive narrative. But even if it does feel a bit scattered, it still resonates with the
- listener. One track in particular that stands out as a centerpoint is TAPE, in which group-leader Kevin Abstract raps,
- defeated and deadpan, about his feelings of inadequacy, his failing family relationships, and how fame has changed
-  him. What really brings the song together though is the fractured, skittering drum beat that spirals up and down in the
+more mature and genuinely introspective than any of their previous work. However, perhaps due to the size and diversity of the group,
+it’s more of a collage than a cohesive narrative. But even if it does feel a bit scattered, it still resonates with the
+listener. One track in particular that stands out as a centerpoint is TAPE, in which group-leader Kevin Abstract raps,
+defeated and deadpan, about his feelings of inadequacy, his failing family relationships, and how fame has changed
+him. What really brings the song together though is the fractured, skittering drum beat that spirals up and down in the
 mix in time with Abstract’s detached breakdown.
 <br/>
 <br/>
@@ -60,7 +60,8 @@ Worst: HONEY, FABRIC, LOOPHOLE
 </h4></p>
 
 <p>To listen to iridescence on youtube, <a href="https://www.youtube.com/watch?v=c2jTXZEkbMg&list=PLkAyBawOOPULRkmHu2QG4PpyiGXWj1LlO&index=4" target="_blank">click here</a>
-
+<br/>
+<p>To see my track rankings or this album, click <a href="QuickReviews.html">here</a>.
   <footer>
     <p>info@example.com <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
   </footer>
