everything finalized except for email link

--- a/EitherOrReview.html
+++ b/EitherOrReview.html
@@ -18,7 +18,7 @@
 <body>
 <center><img src="images/eitherorcover.jpg" width=300px height=300px></center>
 
-</body>
+
 <h2 align="center">Either / Or, Elliott Smith</h2>
 <br/>
 <br/>
@@ -29,11 +29,16 @@
   <li>
     Click <a href="QuickReviews.html">here</a> to read my quick review and track reviews for Either / Or
   </li>
-  <li> click <a href="https://www.youtube.com/watch?v=UuizNQUOFCI&list=PL6KwzgIePF4BbeyY14AVTLNz12UjMcJWC" target="_blank">here</a> to listen
+  <li>Click <a href="https://www.youtube.com/watch?v=UuizNQUOFCI&list=PL6KwzgIePF4BbeyY14AVTLNz12UjMcJWC" target="_blank">here</a> to listen
 to this album on youtube!
   </li>
 </ul>
+</body>
 
+<br/>
+<br/>
+<br/>
+<br/>
 
 <footer>
   <p>info@example.com <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
