--- a/QuickReviews.html
+++ b/QuickReviews.html
@@ -16,6 +16,7 @@
   <title>Quick Reviews</title>
 </head>
 
+<body>
 <center><h2>Quick Reviews</h2></center>
 
 <br/>
@@ -60,7 +61,7 @@
     </tr>
   </tfoot>
 </table>
-<p align"center"><p>
+<center><p>To listen to (most of) In Rainbows on youtube, click <a href="https://www.youtube.com/watch?v=Xq_a8f24UJI" target="_blank">here</a></p></center>
 
 <br/>
 <br/>
@@ -107,7 +108,7 @@
     </tr>
   </tfoot>
 </table>
-
+<center><p>To read my full review of this album, click <a href="iridescenceReview.html">here</a>.</p></center>
 <br/>
 <br/>
 
@@ -153,11 +154,13 @@
     </tr>
   </tfoot>
 </table>
+<center><p>To read my full review of this album, click <a href="EitherOrReview.html">here</a>.</p></center>
+</body>
 
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
 
 <footer>
   <p>info@example.com <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
