--- a/iridescenceReview.html
+++ b/iridescenceReview.html
@@ -15,6 +15,7 @@
   <title>Iridescence Review</title>
 </head>
 
+<body>
 <center><img src="images/irdcover.jpg" width=300px height=300px></center>
 <p><h4>
 iridescence is a ride. It demands your attention from the first moment of the first track, NEW ORLEANS, with its
@@ -62,6 +63,14 @@ Worst: HONEY, FABRIC, LOOPHOLE
 <p>To listen to iridescence on youtube, <a href="https://www.youtube.com/watch?v=c2jTXZEkbMg&list=PLkAyBawOOPULRkmHu2QG4PpyiGXWj1LlO&index=4" target="_blank">click here</a>
 <br/>
 <p>To see my track rankings or this album, click <a href="QuickReviews.html">here</a>.
+
+</body>
+
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+
   <footer>
     <p>info@example.com <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
   </footer>
