created mailto link, DONE

--- a/HomePage.html
+++ b/HomePage.html
@@ -57,8 +57,8 @@
   <br/>
   <br/>
   <br/>
-  
+
     <footer>
-      <p>info@example.com <a href=>Academy for Information Technology</a> | APCSP © 2018</p>
+      <p><a href="mailto:-info@example.com">Contact Me at info@example.com</a> <a href=>Academy for Information Technology</a> | APCSP © 2018</p>
    </footer>
 </html>
