--- a/iridescenceReview.html
+++ b/iridescenceReview.html
@@ -72,7 +72,7 @@ Worst: HONEY, FABRIC, LOOPHOLE
   <br/>
 
   <footer>
-    <p>info@example.com <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
+    <p><a href="mailto:-info@example.com">Contact Me at info@example.com</a> <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
   </footer>
 
 </html>
