created stylesheet and added inline smiles to iridescence review

--- a/HomePage.html
+++ b/HomePage.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <table width="100%">
       <thead>
         <tr>
