--- a/EitherOrReview.html
+++ b/EitherOrReview.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <table width="100%">
     <thead>
       <tr>
