--- a/HomePage.html
+++ b/HomePage.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 
-<html>
+<html class="homepage">
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <table width="100%">
-      <thead>
-        <tr>
-          <th><a href="HomePage.html">Home</a></th>
-          <th><a href="iridescenceReview.html">iridescence Review</a></th>
-          <th><a href="EitherOrReview.html">Either / Or Review</a></th>
-          <th><a href="QuickReviews.html">Quick Reviews</a></th>
-        </tr>
-      </thead>
-  </table>
-  <hr/>
+
+    <ul class="navbar">
+        <li class="navitem"><a href="HomePage.html" class="navlink">Home</a></li>
+        <li class="navitem"><a href="iridescenceReview.html" class="navlink">iridescence Review</a></li>
+        <li class="navitem"><a href="EitherOrReview.html" class="navlink">Either / Or Review</a></li>
+        <li class="navitem"><a href="QuickReviews.html" class="navlink">Quick Reviews</a></li>
+    </ul>
+
     <title>John's Music Reviews</title>
   </head>
   <body>
-    <p><h1 align="center">John Turner's Music Reviews</h1></p>
+
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+
+  <center><p><h1>John Turner's Music Reviews</h1></p></center>
 
   <table>
       <tr>
