added inline styles to home page

--- a/HomePage.html
+++ b/HomePage.html
@@ -18,44 +18,49 @@
   <br/>
   <br/>
   <br/>
-  <br/>
 
-  <center><p><h1>John Turner's Music Reviews</h1></p></center>
+  <center><p><h1 style="color: #000066; border: 5px; border-style: solid; border-color: #ffffff; padding: 0.45em; display: inline;">John Turner's Music Reviews</h1></p></center>
+
+  <br/>
+  <hr/>
+  <br/>
+  <br/>
 
   <table>
       <tr>
         <th>
-          <td>
-            <img src="images/records.jpg" width="400" height="400" align=left margin=10px></th>
+          <td style="width: 50%;">
+            <img src="images/records.jpg" width="400" height="400" style="margin-left: 70px;"></th>
           </td>
         <th>
-          <td align="left">
-        <p><h5>Hello there! My name is John, and I love music. On this site I'll be talking about some
-              of my favorite albums and artists, and even doing some reviews. Here's a little bit about me and
-              how I came to love music: Around the time that I was 9 or 10, I discovered the itunes store, on which
-              I would spend hours exploring and making lists of songs that I wanted. At this point, I didn't stray
-              far out of the realm of pop music. Then, I discovered Coldplay, a band that bridges pop styles with rock
-              electronic, and many other genres. Coldplay was my gateway into the wider musical universe, putting me
-              on the path to some of my favorite artists and eclectic musical tastes. Currently, I listen to just about everything,
-              including: rock to pop, indie, grunge, shoegaze, post-punk, IDM, rap, ambient, alternative, synth pop, electronic,
-              lo-fi, industrial rap, jazz, plunderphonics, new wave, glam rock, trance, classical, modern clasical,
-              hip-hop, trip-hop, noise rock, punk, or folk, and everything in between (except for country, but Wilco might be
-              changing my mind).
-            <br/>
-            <br/>
-              My love of listening to music (as well as a certain chain of events involving a head injury, long story)
-              has also led me to begin playing instruments, including the piano, guitar, synthesizer, and bass, which  has
-              become my passion.
-            <br/>
-            <br/>
-              Sadly, though, I don't really know anyone who likes the music I do. I created this site so that I can express
-              my opinions and share my love of music with others!
-    </h4></p>
-  </td>
-  </th>
-  </tr>
-</table>
-  </body>
+          <td align="left" style="width: 50%;">
+            <p><h5 style="color: #000066; margin-left: 20px;">Hello there! My name is John, and I love music. On this site I'll be talking about some
+                of my favorite albums and artists, and even doing some reviews. Here's a little bit about me and
+                how I came to love music: Around the time that I was 9 or 10, I discovered the itunes store, on which
+                I would spend hours exploring and making lists of songs that I wanted. At this point, I didn't stray
+                far out of the realm of pop music. Then, I discovered Coldplay, a band that bridges pop styles with rock
+                electronic, and many other genres. Coldplay was my gateway into the wider musical universe, putting me
+                on the path to some of my favorite artists and eclectic musical tastes. Currently, I listen to just about everything,
+                including: rock to pop, indie, grunge, shoegaze, post-punk, IDM, rap, ambient, alternative, synth pop, electronic,
+                lo-fi, industrial rap, jazz, plunderphonics, new wave, glam rock, trance, classical, modern clasical,
+                hip-hop, trip-hop, noise rock, punk, or folk, and everything in between (except for country, but Wilco might be
+                changing my mind).
+                <br/>
+                <br/>
+                My love of listening to music (as well as a certain chain of events involving a head injury, long story)
+                has also led me to begin playing instruments, including the piano, guitar, synthesizer, and bass, which  has
+                become my passion.
+                <br/>
+                <br/>
+                Sadly, though, I don't really know anyone who likes the music I do. I created this site so that I can express
+                my opinions and share my love of music with others!
+            </h4></p>
+          </td>
+        </th>
+      </tr>
+  </table>
+
+</body>
 
   <br/>
   <br/>
@@ -63,6 +68,6 @@
   <br/>
 
     <footer>
-      <p><a href="mailto:-info@example.com">Contact Me at info@example.com</a> <a href=>Academy for Information Technology</a> | APCSP © 2018</p>
+      <p><a href="mailto:-info@example.com">Contact Me at info@example.com</a> <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
    </footer>
 </html>
