--- a/EitherOrReview.html
+++ b/EitherOrReview.html
@@ -2,16 +2,14 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <table width="100%">
-    <thead>
-      <tr>
-        <th><a href="HomePage.html">Home</a></th>
-        <th><a href="iridescenceReview.html">iridescence Review</a></th>
-        <th><a href="EitherOrReview.html">Either / Or Review</a></th>
-        <th><a href="QuickReviews.html">Quick Reviews</a></th>
-      </tr>
-    </thead>
-</table>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+
+  <ul class="navbar">
+      <li class="navitem"><a href="HomePage.html" class="navlink">Home</a></li>
+      <li class="navitem"><a href="iridescenceReview.html" class="navlink">iridescence Review</a></li>
+      <li class="navitem"><a href="EitherOrReview.html" class="navlink">Either / Or Review</a></li>
+      <li class="navitem"><a href="QuickReviews.html" class="navlink">Quick Reviews</a></li>
+  </ul>
 <hr/>
   <title>Either / Or Review</title>
 </head>
