--- a/HomePage.html
+++ b/HomePage.html
@@ -3,6 +3,9 @@
 <html class="homepage">
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=PT+Sans');
+    </style>
 
     <ul class="navbar">
         <li class="navitem"><a href="HomePage.html" class="navlink">Home</a></li>
@@ -10,10 +13,11 @@
         <li class="navitem"><a href="EitherOrReview.html" class="navlink">Either / Or Review</a></li>
         <li class="navitem"><a href="QuickReviews.html" class="navlink">Quick Reviews</a></li>
     </ul>
-
+<hr/>
     <title>John's Music Reviews</title>
   </head>
-  <body>
+
+<body>
 
   <br/>
   <br/>
@@ -22,7 +26,6 @@
   <center><p><h1 style="color: #000066; border: 5px; border-style: solid; border-color: #ffffff; padding: 0.45em; display: inline;">John Turner's Music Reviews</h1></p></center>
 
   <br/>
-  <hr/>
   <br/>
   <br/>
 
@@ -30,7 +33,7 @@
       <tr>
         <th>
           <td style="width: 50%;">
-            <img src="images/records.jpg" width="400" height="400" style="margin-left: 70px;"></th>
+            <img src="images/records.jpg" width="400" height="400" style="margin-left: 70px; border: 5px; border-style: solid; border-color: #ffffff; padding: 0.45em; display: inline;"></th>
           </td>
         <th>
           <td align="left" style="width: 50%;">
@@ -68,6 +71,11 @@
   <br/>
 
     <footer>
-      <p><a href="mailto:-info@example.com">Contact Me at info@example.com</a> <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
+      <p><a href="mailto:-info@example.com" style="color: #000066;">Contact Me at info@example.com</a> <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month" target="_blank">Academy for Information Technology</a> | APCSP © 2018</p>
    </footer>
 </html>
+
+<!-- Checklist:
+  Inline styles: 3/3 DONE
+  :hover effects: NOT DONE
+  Image border: DONE -->
