set all background colors

--- a/HomePage.html
+++ b/HomePage.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 
-<html class="homepage">
+<html id="page">
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <style>
-      @import url('https://fonts.googleapis.com/css?family=PT+Sans');
-    </style>
 
     <ul class="navbar">
         <li class="navitem"><a href="HomePage.html" class="navlink">Home</a></li>
@@ -23,7 +20,7 @@
   <br/>
   <br/>
 
-  <center><p><h1 style="color: #000066; border: 5px; border-style: solid; border-color: #ffffff; padding: 0.45em; display: inline;">John Turner's Music Reviews</h1></p></center>
+  <center><p><h1 style="color: #000066;">John Turner's Music Reviews</h1></p></center>
 
   <br/>
   <br/>
