--- a/QuickReviews.html
+++ b/QuickReviews.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html id="page">
 
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 
   <ul class="navbar">
       <li class="navitem"><a href="HomePage.html" class="navlink">Home</a></li>
