finished most inline styles

--- a/EitherOrReview.html
+++ b/EitherOrReview.html
@@ -14,20 +14,20 @@
 </head>
 
 <body>
-<center><img src="images/eitherorcover.jpg" width=300px height=300px></center>
+<center><img src="images/eitherorcover.jpg" width=300px height=300px style="border: 5px; border-style: solid; border-color: #4d0000; padding: 0.45em; display: inline;"></center>
 
 
 <h2 align="center">Either / Or, Elliott Smith</h2>
 <br/>
 <br/>
-<p align="center">This review isn't quite ready yet, but it will be soon! In the meantime, you can:</p>
+<p align="center" style="color: #000066;">This review isn't quite ready yet, but it will be soon! In the meantime, you can:</p>
 <br/>
 
 <ul>
-  <li>
+  <li style="color: #fff;">
     Click <a href="QuickReviews.html">here</a> to read my quick review and track reviews for Either / Or
   </li>
-  <li>Click <a href="https://www.youtube.com/watch?v=UuizNQUOFCI&list=PL6KwzgIePF4BbeyY14AVTLNz12UjMcJWC" target="_blank">here</a> to listen
+  <li style="color: #fff;">Click <a href="https://www.youtube.com/watch?v=UuizNQUOFCI&list=PL6KwzgIePF4BbeyY14AVTLNz12UjMcJWC" target="_blank">here</a> to listen
 to this album on youtube!
   </li>
 </ul>
