--- a/HomePage.html
+++ b/HomePage.html
@@ -38,7 +38,7 @@
                 of my favorite albums and artists, and even doing some reviews. Here's a little bit about me and
                 how I came to love music: Around the time that I was 9 or 10, I discovered the itunes store, on which
                 I would spend hours exploring and making lists of songs that I wanted. At this point, I didn't stray
-                far out of the realm of pop music. Then, I discovered Coldplay, a band that bridges pop styles with rock
+                far out of the realm of pop music. Then, I discovered Coldplay, a band that bridges pop styles with rock,
                 electronic, and many other genres. Coldplay was my gateway into the wider musical universe, putting me
                 on the path to some of my favorite artists and eclectic musical tastes. Currently, I listen to just about everything,
                 including: rock to pop, indie, grunge, shoegaze, post-punk, IDM, rap, ambient, alternative, synth pop, electronic,
@@ -74,5 +74,5 @@
 
 <!-- Checklist:
   Inline styles: 3/3 DONE
-  :hover effects: NOT DONE
+  :hover effects:DONE
   Image border: DONE -->
