added some stuff idk

--- a/QuickReviews.html
+++ b/QuickReviews.html
@@ -21,11 +21,12 @@
 <br/>
 
 <center><h4>In Rainbows, <em>Radiohead</em></h4></center>
-<center><img src="images/inrainbowscover.jpg" height="200px" width="200px"></center>
-<table width="400 px" align="center">
+<center><img src="images/inrainbowscover.jpg" height="200px" width="200px" style="border: 5px; border-style: solid; border-radius: 30px; border-color: #000; padding: 0.45em; display: inline;"></center>
+
+<table attr="qrtab" width="400 px" align="center">
   <thead>
     <tr>
-      <td align="center">Song/Ranking</td>
+      <td align="left">Song/Ranking</td>
       <td align="center">Thoughts</td>
     </tr>
   </thead>
@@ -65,11 +66,12 @@
 <br/>
 
 <center><h4>iridescence, <em>BROCKHAMPTON</em></h4></center>
-<center><img src="images/irdcover.jpg" width="200px" height="200px"></center>
-<table width="400 px" align="center">
+<center><img src="images/irdcover.jpg" width="200px" height="200px" style="border: 5px; border-style: solid; border-radius: 30px; border-color: #000066; padding: 0.45em; display: inline;"></center>
+
+<table attr="qrtab" width="400 px" align="center">
   <thead>
     <tr>
-      <td align="center">Song/Ranking</td>
+      <td align="left">Song/Ranking</td>
       <td align="center">Thoughts</td>
     </tr>
   </thead>
@@ -112,11 +114,12 @@
 
 
 <center><h4>Either / Or, <em>Elliott Smith</em></h4></center>
-<center><img src="images/eitherorcover.jpg" weight="200px" height="200px"></center>
-<table width="400 px" align="center">
+<center><img src="images/eitherorcover.jpg" weight="200px" height="200px" style="border: 5px; border-style: solid; border-radius: 30px; border-color: #4d0000; padding: 0.45em; display: inline;"></center>
+
+<table attr="qrtab" width="400 px" align="center">
   <thead>
     <tr>
-      <td align="center">Song/Ranking</td>
+      <td align="left">Song/Ranking</td>
       <td align="center">Thoughts</td>
     </tr>
   </thead>
