finished attribute selectors

--- a/EitherOrReview.html
+++ b/EitherOrReview.html
@@ -17,7 +17,7 @@
 <center><img src="images/eitherorcover.jpg" width=300px height=300px style="border: 5px; border-style: solid; border-color: #4d0000; padding: 0.45em; display: inline;"></center>
 
 
-<h2 align="center">Either / Or, Elliott Smith</h2>
+<h3 align="center" attr="revtitl">Either / Or, Elliott Smith</h3>
 <br/>
 <br/>
 <p align="center" style="color: #000066;">This review isn't quite ready yet, but it will be soon! In the meantime, you can:</p>
@@ -39,7 +39,8 @@ to this album on youtube!
 <br/>
 
 <footer>
-  <p><a href="mailto:-info@example.com">Contact Me at info@example.com</a> <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
+  <p>Contact me at <a href="mailto:-info@example.com">info@example.com</a> <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
+</footer>
 </footer>
 
 </html>
