--- a/HomePage.html
+++ b/HomePage.html
@@ -68,7 +68,8 @@
   <br/>
 
     <footer>
-      <p><a href="mailto:-info@example.com" style="color: #000066;">Contact Me at info@example.com</a> <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month" target="_blank">Academy for Information Technology</a> | APCSP © 2018</p>
+      <p>Contact me at <a href="mailto:-info@example.com">info@example.com</a> <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
+    </footer>
    </footer>
 </html>
 
