--- a/QuickReviews.html
+++ b/QuickReviews.html
@@ -20,7 +20,7 @@
 <br/>
 <br/>
 
-<center><h4>In Rainbows, <em>Radiohead</em></h4></center>
+<center><h3 attr="revtitl">In Rainbows, Radiohead</h3></center>
 <center><img src="images/inrainbowscover.jpg" height="200px" width="200px" style="border: 5px; border-style: solid; border-radius: 30px; border-color: #000; padding: 0.45em; display: inline;"></center>
 
 <table attr="qrtab" width="400 px" align="center">
@@ -55,7 +55,7 @@
   <tfoot>
     <tr>
       <td>
-        <h4>Score: 9.8/10</h4>
+        <h4 class="scoralign" attr="score">Score: 9.8/10</h4>
       </td>
     </tr>
   </tfoot>
@@ -65,7 +65,7 @@
 <br/>
 <br/>
 
-<center><h4>iridescence, <em>BROCKHAMPTON</em></h4></center>
+<center><h3 attr="revtitl">iridescence, BROCKHAMPTON</h3></center>
 <center><img src="images/irdcover.jpg" width="200px" height="200px" style="border: 5px; border-style: solid; border-radius: 30px; border-color: #000066; padding: 0.45em; display: inline;"></center>
 
 <table attr="qrtab" width="400 px" align="center">
@@ -103,7 +103,7 @@
   <tfoot>
     <tr>
       <td>
-        <h4>Score: 7.5/10</h4>
+        <h4 class="scoralign" attr="score">Score: 7.5/10</h4>
       </td>
     </tr>
   </tfoot>
@@ -113,7 +113,7 @@
 <br/>
 
 
-<center><h4>Either / Or, <em>Elliott Smith</em></h4></center>
+<center><h3 attr="revtitl">Either / Or, Elliott Smith</h3></center>
 <center><img src="images/eitherorcover.jpg" weight="200px" height="200px" style="border: 5px; border-style: solid; border-radius: 30px; border-color: #4d0000; padding: 0.45em; display: inline;"></center>
 
 <table attr="qrtab" width="400 px" align="center">
@@ -150,7 +150,7 @@
   <tfoot>
     <tr>
       <td>
-        <h4>Score: 10/10</h4>
+        <h4 class="scoralign" attr="score">Score: 10/10</h4>
       </td>
     </tr>
   </tfoot>
@@ -164,7 +164,8 @@
 <br/>
 
 <footer>
-  <p><a href="mailto:-info@example.com">Contact Me at info@example.com</a> <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
+  <p>Contact me at <a href="mailto:-info@example.com">info@example.com</a> <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
+</footer>
 </footer>
 
 </html>
