--- a/iridescenceReview.html
+++ b/iridescenceReview.html
@@ -16,7 +16,7 @@
 
 <body>
 <center><img src="images/irdcover.jpg" width=300px height=300px style="border: 5px; border-style: solid; border-color: #000066; padding: 0.45em; display: inline;"></center>
-<center><h3><span style="color: blue;">iridescence</span>, BROCKHAMPTON</h3></center>
+<center><h3 attr="revtitl"><span style="color: blue;">iridescence</span>, BROCKHAMPTON</h3></center>
 
 <p><h4>
   iridescence is a ride. It demands your attention from the first moment of the first track, NEW ORLEANS, with its
@@ -63,7 +63,7 @@
 <br/>
 <br/>
 
-<p><h4>7.5/10</h4></p>
+<p><h4 attr="score">7.5/10</h4></p>
 
 <br/>
 <br/>
@@ -90,7 +90,7 @@
 <br/>
 
   <footer>
-    <p><a href="mailto:-info@example.com">Contact Me at info@example.com</a> <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
+    <p>Contact me at <a href="mailto:-info@example.com">info@example.com</a> <a href="https://www.ucvts.tec.nj.us/domain/16#calendar4326/20181010/month">Academy for Information Technology</a> | APCSP © 2018</p>
   </footer>
 
 </html>
